--- a/client/Theme files/left_panel/left_panel.html
+++ b/client/Theme files/left_panel/left_panel.html
@@ -61,18 +61,18 @@
                     <li class="xn-title">Navigation</li>     
         {{#if check_logged_in_user}}            
                     <li>
-                        <a class="pointer" id="create_report"><i class="fa fa-upload"></i> <span class="xn-text">Update Image</span></a>
+                        <a class="pointer" id="create_report"><i class="fa fa-upload"></i> <span class="xn-text">Upload Image</span></a>
                     </li>
 
                     <li>
-                        <a class="pointer" id="report_listing"><span class="fa fa-desktop"></span> <span class="xn-text">Report listing</span></a>
+                        <a class="pointer" id="report_listing"><span class="fa fa-desktop"></span> <span class="xn-text">View Report</span></a>
                     </li>
 
                     <li>
-                        <a class="pointer" id="dashboard"><i class="fa fa-user-md"></i> <span class="xn-text">Doctor's listing</span></a>
+                        <a class="pointer" id="dashboard"><i class="fa fa-user-md"></i> <span class="xn-text">Doctor</span></a>
                     </li>  
                     <li>
-                        <a class="pointer" id="dashboard2"><i class="fa fa-user"></i> Patient's listing</a>
+                        <a class="pointer" id="dashboard2"><i class="fa fa-user"></i> Patient</a>
                     </li> 
         {{else}}
 
