--- a/client/Theme files/login/login.html
+++ b/client/Theme files/login/login.html
@@ -6,9 +6,9 @@
 
         <div class="login-container lightmode">
             <div class="login-box animated fadeInDown">
-                <div class="login_title">Bio Medical</div>
+                <div class="login_title">Bio Meds</div>
                 <div class="login-body">
-                    <div class="login-title"><strong>Log In</strong> Panel</div>
+                    <div class="login-title"><strong>Sign in</strong></div>
                     <div class="form-horizontal">
                     <div class="form-group">
                       <div class="col-md-12">
@@ -23,13 +23,13 @@
 
                     <div class="form-group">
                         <div class="col-md-6">
-                            <a  class="btn btn-link btn-block align_left" id="send_to_forget_password" >Forget Password ?</a>
+                            <a  class="btn btn-link btn-block align_left" id="send_to_forget_password" >Forgot Password ?</a>
                         </div>
                         <div class="col-md-6">
                             <span >
                                 <button class="btn btn-info btn-block" id="Check_auth_for_login" >
                                 <i class="fa fa-spinner fa-pulse fa-fw div_hide_class" id="loader_gif"></i>
-                                <span id="save_text"> Log In </span></button>
+                                <span id="save_text"> Sign in </span></button>
                             </span>  
                         </div>
                     </div>
