--- a/client/change_forget_password/change_forget_password.html
+++ b/client/change_forget_password/change_forget_password.html
@@ -11,7 +11,7 @@
             <div class="login-box animated fadeInDown">
                 <div class="login_title">Bio Medical</div>
                 <div class="login-body">
-                    <div class="login-title"><strong>Enter your new password here</strong> </div>
+                    <div class="login-title"><strong>Change Password</strong> </div>
                     <div class="form-horizontal">
 
                     <div class="form-group">
@@ -30,11 +30,11 @@
 
 
                         <div class="col-md-3 change_password_fonts">
-                            <p>retype Password</p>
+                            <p>Confirm Password</p>
                         </div>
 
                         <div class="col-md-9">
-                        <input type="password" class="form-control" placeholder="Re-type password" id="retype_password" minlength="8" />                      
+                        <input type="password" class="form-control" placeholder="Confirm Password" id="retype_password" minlength="8" />                      
                         </div>
 
                         </div>
