--- a/client/create_report/create_report.html
+++ b/client/create_report/create_report.html
@@ -83,7 +83,7 @@
                                     </div>
 
                                 <div class="form-group">
-                                        <label class="col-md-3 col-xs-12 control-label">Select DCM format image</label>
+                                        <label class="col-md-3 col-xs-12 control-label">Select DICOM image</label>
                                         <div class="col-md-6 col-xs-12">                                            
                                             <div class="">
 
@@ -101,7 +101,7 @@
                 <span >
                     <button class="btn btn-primary pull-right" id="submit_report_form" >
                     <i class="fa fa-spinner fa-pulse fa-fw div_hide_class" id="loader_gif"></i>
-                    <span id="save_text"> Save </span></button>
+                    <span id="save_text"> Upload </span></button>
                 </span>
 
                                    
