--- a/client/forget_password/forget_password.html
+++ b/client/forget_password/forget_password.html
@@ -8,7 +8,7 @@
         <div class="login-container lightmode">
         
             <div class="login-box animated fadeInDown">
-                <div class="login_title">Bio Medical</div>
+                <div class="login_title">Bio Meds</div>
                 <div class="login-body">
                     <div class="login-title"><strong>Enter email to reset password</strong> </div>
                     <div class="form-horizontal">
