--- a/client/patient module/patient_listing/patient_listing.html
+++ b/client/patient module/patient_listing/patient_listing.html
@@ -51,7 +51,7 @@
                             <div class="panel panel-default">
 
                                 <div class="panel-heading">                                
-                                    <h3 class="panel-title">List of Patients</h3>
+                                    <h3 class="panel-title">Patient</h3>
 
      <span id="add_patient_div" >
             <button class="pull-right btn btn-primary btn-lg change_color_on_hover" id="add_patient" style="
@@ -74,7 +74,7 @@
                        <div class="topnav" id="capture_search_event" >
                       <div class="search-container" >
                         
-                          <input type="text" placeholder="Search.." name="search" id="search" autocomplete="off" >
+                          <input type="text" placeholder="Search by Name" name="search" id="search" autocomplete="off" >
                           <button type="submit" id="search_btn" class="search_btn" ><i class="fa fa-search" ></i></button>
                         
                       </div>
